# ActionLens

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  视频人员行为分析课题方案.md  项目进度.md
docs/: ACTIONLENS_STAGE_REPORT_200.md  AVA.md  CHARADES_200_TRAINING.md  CHARADES_500_TRAINING.md  CHARADES_TEST_REPORT.html  CHARADES_TEST_REPORT.md  Charades.md  EXPERIMENT_RESULTS_SUMMARY.md  NTU_RGBD_120.md  TAL_4090_EXECUTION_PACKAGE.md  TAL_MODEL.md  TAL_TEST_SPLIT_EXPORT.md  TAL_TRAINING_4090_LINUX.md  TAL_TRAIN_SPLIT_EXPORT.md  VLM_REVIEW.md  数据集调研.md
outputs/: actionformer_200_epoch050_test_predictions.csv  actionformer_200_epoch050_test_predictions.json  actionformer_200_epoch050_test_predictions.pkl  actionformer_200_epoch050_test_topk.json  actionformer_200_epoch050_test_topk_recall_summary.json  actionformer_200_epoch050_test_topk_recall_summary.md  actionformer_200_epoch050_val_predictions.csv  actionformer_200_epoch050_val_predictions.json  actionformer_200_epoch050_val_predictions.pkl  actionformer_200_epoch050_val_topk.json  actionformer_200_epoch050_val_topk_recall_summary.json  actionformer_200_epoch050_val_topk_recall_summary.md  actionformer_charades_slowfast_train_smoke_summary.json  actionformer_charades_smoke_eval_summary.json  actionformer_charades_smoke_train_recheck2_summary.json  actionformer_charades_smoke_train_recheck_summary.json  actionformer_charades_smoke_train_summary.json  actionformer_epoch034_test_predictions.csv  actionformer_epoch034_test_predictions.json  actionformer_epoch034_test_predictions.pkl  (+106 more)
papers/: 01_AVA_读书笔记.md  (+11 more)
(+996 files in other folders)
